# RobustProfileControl

./: .gitignore  Cargo.toml  PLANNING.md
Plan/: robust_cmp_profile_control_4_2_en.tex
crates/control-core/: Cargo.toml
crates/control-core/src/: antiwindup.rs  generalized_plant.rs  inrun.rs  lib.rs  observer.rs  plant.rs  qp.rs  r2r.rs  simulation.rs  svd.rs  synth_data.rs  types.rs  weighting.rs
crates/control-core/tests/: comprehensive_tests.rs  debug_noise.rs  integration_tests.rs  recent_features_tests.rs
crates/wasm-bridge/: Cargo.toml
crates/wasm-bridge/src/: lib.rs
web/: index.html  style.css
web/js/: app.js  charts.js  controls.js  simulation.js
